# fwix

./: .gitignore  CMakeLists.txt
docker/: Dockerfile  Singularity
operator/: CMakeLists.txt
operator/jupyter/: Untitled.ipynb  plot_benchmark.ipynb
operator/src/: CMakeLists.txt  CudaKernel.cu  CudaKernel.cuh  CudaOperator.h  FFT.cpp  FFT.h  KernelLauncher.cu  KernelLauncher.cuh  StreamingOperator.h  complex_vector.cpp  complex_vector.cu  complex_vector.cuh  complex_vector.h  fft_callback.cu
operator/src/python/: CudaOperator.py
operator/tests/: CMakeLists.txt  complex_vector_unit_test.cpp  cufft_saturation.cpp  fft_benchmark.cpp  fft_parallel_benchmark.cpp  operator_unit_test.cpp
propagator/: CMakeLists.txt
propagator/jupyter/: compress.npy  test_down_up.ipynb  test_injection.ipynb  test_propagator.ipynb  test_pspi.ipynb  test_pspi_nsps.ipynb
propagator/jupyter/.ipynb_checkpoints/: test_nsps-checkpoint.ipynb  test_pspi-checkpoint.ipynb
propagator/src/: CMakeLists.txt  Downward.cpp  ExtendedBorn.cpp  ExtendedBorn.h  ForwardScattering.cpp  ForwardScattering.h  ImagingCondition.cpp  ImagingCondition.h  Injection.cpp  Injection.h  NSPS.cpp  OneStep.cpp  OneStep.h  OneWay.cpp  OneWay.h  PSPI.cpp  PhaseShift.cpp  PhaseShift.h  Propagator.cpp  Propagator.h  PropagatorArrow.cpp  RefSampler.cpp  RefSampler.h  Reflect.cpp  Reflect.h  Scatter.cpp  Scatter.h  Scattering.cpp  Scattering.h  Selector.h  StreamingPropagator.cpp  StreamingPropagator.h  Taper.h  WEM.h  WavefieldPool.cpp  WavefieldPool.h  imaging_condition.cu  injection.cu  phase_shift.cu  prop_kernels.cuh  (+4 more)
propagator/src/python/: CudaWEM.py  pyCudaWEM.cpp
propagator/tests/: CMakeLists.txt  born_unit_test.cpp  prop_benchmark.cpp  prop_unit_test.cpp  pspi_benchmark.cpp  stream_benchmark.cpp  stream_unit_test.cpp
